# web_server

./: .gitignore  CMakeLists.txt  Makefile  README.md  flow  main  main.cpp  testUploadFile.txt  webserver
Request/: HttpRequestParser.cpp  HttpRequestParser.h
parser/: CharacterReader.cpp  CharacterReader.hpp  ErrorHandler.cpp  Lexer.cpp  Lexer.hpp  LexerTest.cpp  Parser.cpp  Parser.hpp  ServerConfig.cpp  ServerConfig.hpp  a.out  main.cpp  my_program  sample1.conf  sample2.conf  sample4.conf  sample5.conf
src/: Monitor.cpp  Monitor.hpp  Signals.cpp  Signals.hpp  Webserver.cpp  Webserver.hpp  main.cpp
src/CGI/: CGI.cpp  CGI.hpp  CGIEnvironment.cpp  CGIEnvironment.hpp  CGIRequest.cpp  CGIRequest.hpp  CGIResponse.cpp  CGIResponse.hpp
src/Config/: ConfigHandler.cpp
src/Exceptions/: Exceptions.cpp  Exceptions.hpp
src/InitialConfig/: InitialConfigHandler.cpp
src/Interfaces/: ICGI.hpp  IConfigHandler.hpp  IHttpRequestHandler.hpp  IHttpResponseHandler.hpp  IInitialConfigHandler.hpp  IInitialParametersHandler.hpp  IParser.hpp  IServerConfig.hpp  IServerSetupHandler.hpp
src/Parser/: CharacterReader.cpp  CharacterReader.hpp  Lexer.hpp  Parser.cpp  Parser.hpp  Resources.cpp  Resources.hpp  ServerConfig.cpp  ServerConfig.hpp  ServerLocation.cpp  ServerLocation.hpp
src/Request/: HttpRequestHandler.cpp  HttpRequestHandler.hpp  HttpRequestParser.cpp
src/Response/: HttpResponseHandler.cpp  HttpResponseHandler.hpp
src/Setup/: FileParser.cpp  InitialParametersHandler.cpp  ServerSetupHandler.cpp
src/Setup/Parser/: CharacterReader.cpp  InputReader.cpp  InputReader.hpp  Lexer.cpp  Lexer.hpp  Parser.cpp  Parser.hpp  (+7 more)
src/parser/: CharacterReader.cpp  CharacterReader.hpp  Lexer.cpp  Lexer.hpp  ServerConfig.hpp  ServerLocation.hpp  main.cpp  sample5.conf  sample6.conf
static/: 400-Page.html  500-Page.html  Hello-World-Page.html  Up-The-Irons-Page.html  listDir.php  postFile.php
static/errorPages/: 404-Page.html  405-Page.html  413-Page.html  502-Page.html
static/home/: index.html
static/upload/: postFile.php  upload-file.html
testing/: ServerConfig.cpp  a.out  cgi.cpp  dummy.cpp  main.cpp  my_program  testing.conf  testing.cpp  uploadFileCGI.sh
testing/configFiles/: sample1.conf  sample2.conf  sample3.conf  sample5.conf  sample7.conf  sample8.conf
testing_samples/: default.conf
